--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -63,12 +63,49 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand')
+    const minuteHand = document.querySelector('.min-hand')
+    const hourHand = document.querySelector('.hour-hand')
 
+    function setDate() {
+      const now = new Date()
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      if (seconds === 0) {
+        secondHand.style.transition = 'none';
+      } else {
+        secondHand.style.transition = 'all 0.05s';
+      }
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;    
+      
+      const mins = now.getMinutes()
+      const minutesDegree = (mins / 60) * 360 + 90;
+      if (mins === 0 && seconds === 0) {
+        minuteHand.style.transition = 'none';
+      } else {
+        minuteHand.style.transition = 'all 0.1s';
+      }
+      minuteHand.style.transform = `rotate(${minutesDegree}deg)`
+      
+      const hours = now.getHours()
+      const hourDegrees = (hours / 12) * 360 + 90;
+      if (mins === 0 && seconds === 0 && hours === 0) {
+        hourHand.style.transition = 'none';
+      } else {
+        hourHand.style.transition = 'all 0.1s';
+      }
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`
+    }
+
+    setInterval(setDate, 1000)
 
   </script>
 </body>
